<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/tv_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:background="@android:drawable/edit_text"
        android:hint="@string/edt_name_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_modelnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_name"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:text="@string/tv_modelnumber"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_modelnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_modelnumber"
        android:background="@android:drawable/edit_text"
        android:hint="@string/edt_modelnumber_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_modelnumber"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:text="@string/tv_number"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_number"
        android:background="@android:drawable/edit_text"
        android:hint="@string/edt_number"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_number"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:text="@string/tv_location"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_location"
        android:background="@android:drawable/edit_text"
        android:hint="@string/edt_location"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_location"
        android:text="@string/btn_save"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_save"
        android:text="@string/btn_cancel"
        android:textSize="25sp" />

</RelativeLayout>