<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/tv_querymodelnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_number"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:text="@string/tv_querynumber"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_querynumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_querymodelnumber"
        android:background="@android:drawable/edit_text"
        android:hint="@string/edt_querynumber"
        android:inputType="number" />
    <Button
        android:id="@+id/btn_query1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_querynumber"
        android:text="@string/btn_query"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/btn_cancel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_query1"
        android:text="@string/btn_cancel"
        android:textSize="25sp"/>
</RelativeLayout>